apps/production/browser-chaperone/slack-relay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slack-relay
  namespace: browser-chaperone-prod
spec:
  selector:
    app: slack-relay
  ports:
    - name: http
      port: 3600
      targetPort: 3600
      protocol: TCP
